--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "com.zedr.cordova_xw_vr",
   "short_name": "cordova_xw_vr",
-  "background_color": "#ffffff",
+  "background_color": "#000000",
   "display": "standalone",
   "orientation": "any",
   "start_url": "index.html",
